--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
+ctranslate2==4.3.1
+evaluate==0.4.2
 faster_whisper==1.0.1
-loguru==0.7.2
-nltk==3.8.1
+ffmpeg_python==0.2.0
+kaldialign==0.9.1
 numpy==2.0.0
-openai==1.35.7
+onnxruntime==1.16.0
+openai==1.35.10
+openai_whisper==20231117
 PyAudio==0.2.14
 python-dotenv==1.0.1
 scipy==1.14.0
+setuptools==69.5.1
+soundfile==0.12.1
+tensorrt_llm==0.10.0
+tokenizers==0.19.1
+torch==2.3.1
+websocket_client==1.8.0
+websockets==11.0.3
